# todo-fullstack-app

./: .gitignore  CLAUDE.md  FINAL-STATUS.md  HF-SPACE-ACTION-ITEMS.md  HF-SPACE-UPDATE-INSTRUCTIONS.md  README.md  SECURITY-ACTION-REQUIRED.md  SESSION-SUMMARY-2026-02-19.md  SUCCESS-SUMMARY.md  package-lock.json  phase-1-upgraded (1).md  pyproject.toml  requirements.txt  schema.json
.claude/: settings.local.json
.github/workflows/: deploy-all.yml  deploy-backend.yml  deploy-frontend.yml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  init_db.py  main.py  requirements.txt  test_auth.py  test_jwt.py  test_jwt_middleware.py
docs/kubernetes/: aiops-setup.md  deployment-commands.md  docker-ai-examples.md  docker-build.md  environment-variables.md  huggingface-spaces-setup.md  implementation-progress.md  kubectl-ai-examples.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
helm/todo-app/: Chart.yaml  SECRETS.md  values-dev.yaml  values.yaml
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-fullstack-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-professional-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: main.py  main.py.backup
(+137 files in other folders)
